[package]
name = "xuanqi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.5"
actix-cors = "0.6"
actix-identity = "0.4"
actix-session = { version = "0.7", features = ["redis-rs-session"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "1.3.2"
mongodb = "2"
futures = "0.3.21"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres"] }
# tokio = "1.18.2"
# tokio-stream = " 0.1.8"
# redis = "0.21.6"

[dev-dependencies]
tokio-test = "0.4.2"
